--- a/Style.css
+++ b/Style.css
@@ -23,6 +23,9 @@ html,body{
 
 
     --border-primary-color:#333333;
+    --bg-fill-color:#fdfdfc;
+    --bg-food-color:red;
+    --bg-snake-color:green;
 
     --border-radius-xs:4px;
     --border-radius-sm:8px;
@@ -38,6 +41,19 @@ html{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+.btn{
+    padding: var(--spacing-sm) var(--spacing-md);
+    border:none;
+    border-radius: var(--border-radius-sm);
+    cursor: pointer;
+    transform:all 0.3s ease-in-out;
+       
+};
+
+.btn:hover{
+    transform: scale(1.1);
+}
 section{
     padding: var(--spacing-2xl);
     display: flex;
@@ -46,7 +62,7 @@ section{
     gap: var(--spacing-lg);
 }
 main,section{
-     height: 100%;
+    height: 100%;
     width: 100%;
 }
 
@@ -70,12 +86,49 @@ section .infos{
     border: 1px solid var(--border-primary-color);
     flex-grow: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(30px,1fr));
-    grid-template-rows: repeat(auto-fill,minmax(30px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(50px,1fr));
+    grid-template-rows: repeat(auto-fill,minmax(50px,1fr));
 }
 
 section .board .block{
-    width: 30px;
-    height: 30px;
+    /* width: 30px;
+    height: 30px; */
     border: 1px solid var(--border-primary-color);
+    border-radius: 50%;
+}
+
+.fill{
+    background-color: var(--bg-snake-color);
+    border-radius:50%;
+}
+
+.food{
+    background-color: var(--bg-food-color);
+     border-radius:50%;
+}
+
+
+
+.modal{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #33333380;
+    backdrop-filter: blur(3px);
+
+}
+
+.modal .start-game, .modal .restart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:var(--spacing-lg)
+}
+
+.modal .restart{
+    display:none;
 }
